--- a/final/references.bib
+++ b/final/references.bib
@@ -161,6 +161,15 @@
   note={Accessed: 2019-12-01}
 }
 
+@article{xiao,
+  author={Xiao, Mingyu and Nagamouchi, Hiroshi},
+  title={Exact Algorithms for Maximum Independent Set},
+  journal={Information and Computation},
+  volume={255},
+  year={2017},
+  pages={126--146}
+}
+
 @book{zykov,
   title={On Some Properties of Linear Complexes},
   author={Zykov, Alexandre A.},
