Split computation theory section

--- a/final/references.bib
+++ b/final/references.bib
@@ -1,3 +1,16 @@
+@article{bron,
+  author={Bron, Coen and Kerbosch, Joep},
+  title={Algorithm 457: Finding All Cliques of an Undirected Graph},
+  journal={Communications of the ACM},
+  volume={16},
+  number={9},
+  publisher={Assocation for Computing Machinery (ACM)},
+  address={New York},
+  month={September},
+  year={1973},
+  pages={575--577}
+}
+
 @inproceedings{cavallaro,
   author={Behdad, Sara and Cavallaro, Jeffery and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol},
   title={A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
@@ -85,6 +98,16 @@
   year={2018}
 }
 
+@article{johnston,
+  author={Johnston, H.C.},
+  title={Cliques of a Graph---Variations on the Bron-Kerbosch Algorithm},
+  journal={International Journal of Computer and Information Sciences},
+  volume={5},
+  number={3},
+  year={1976},
+  pages={209--238}
+}
+
 @article{mcdiarmid,
   author={McDiarmid, Colin},
   title={Determining the Chromatic Number of a Graph},
@@ -154,13 +177,6 @@
   year={2001}
 }
 
-@misc{zhang,
-  author={Zhang, Tengren},
-  title={Triangle Free Graphs and Their Chromatic Number},
-  howpublished={\url{http://www.math.uchicago.edu/~may/VIGRE/VIGRE2008/REUPapers/Zhang.pdf}},
-  note={Accessed: 2019-12-01}
-}
-
 @article{xiao,
   author={Xiao, Mingyu and Nagamouchi, Hiroshi},
   title={Exact Algorithms for Maximum Independent Set},
@@ -168,6 +184,13 @@
   volume={255},
   year={2017},
   pages={126--146}
+}
+
+@misc{zhang,
+  author={Zhang, Tengren},
+  title={Triangle Free Graphs and Their Chromatic Number},
+  howpublished={\url{http://www.math.uchicago.edu/~may/VIGRE/VIGRE2008/REUPapers/Zhang.pdf}},
+  note={Accessed: 2019-12-01}
 }
 
 @book{zykov,
@@ -178,19 +201,6 @@
   volume={7},
   year={1949 (translated 1952)},
   pages={418--449}
-}
-
-@article{bron,
-  author={Bron, Coen and Kerbosch, Joep},
-  title={Algorithm 457: Finding All Cliques of an Undirected Graph},
-  journal={Communications of the ACM},
-  volume={16},
-  number={9},
-  publisher={Assocation for Computing Machinery (ACM)},
-  address={New York},
-  month={September},
-  year={1973},
-  pages={575--577}
 }
 
 @article{myers,
