--- a/final/references.bib
+++ b/final/references.bib
@@ -223,7 +223,7 @@
 }
 
 @article{obit,
-  title={Alexander Zykov 1922-2013},
+  title={{A}lexander {Z}ykov 1922-2013},
   author={Voloshin, Vitaly},
   month={January},
   year={2014}
