--- a/final/algorithm.tex
+++ b/final/algorithm.tex
@@ -1,16 +1,16 @@
 \section{The Proposed Algorithm}\label{sec:algorithm}
 
-The major advantages of the Zykov and Christofides algorithms described in the previous section are that they don't
+The major advantages of the Christofides and Zykov algorithms described in the previous section are that they don't
 depend on the connectedness of a graph, an example of a chromatic coloring is readily available, and the fact that
-the algorithms can be coded rather easily to run on a computer.  Their major disadvantage is its their high runtime
-complexity, which as was shown is inherent to the chromatic number problem.
+the algorithms can be coded rather easily to run on a computer.  Their major disadvantage is their high runtime
+complexity, which is inherent to the chromatic number problem.
 
 Thus, the goals of the proposed algorithm are as follows:
 \begin{enumerate}
 \item It should not depend on whether the graph is connected or not.
-\item An example of a chromatic coloring should be available.
+\item An example of a chromatic coloring should be readily available.
 \item It can be easily coded for execution on a computer.
-\item It has better runtime performance than the existing algorithms.
+\item It has better runtime performance than the well-known algorithms.
 \end{enumerate}
 
 To accomplish these goals, the proposed algorithm loops on successively higher values of \(k\).  For each candidate
@@ -27,37 +27,41 @@ analytical process to know the minimum number of parts as opposed to an actual F
 
 This algorithm was first proposed by the author and his advisor in collaboration with a team of mechanical
 engineering researchers from SUNY Buffalo \cite{cavallaro}.  It accepts a graph \(G\) as input, provides \(\X(G)\)
-as output, and is composed of an outer loop on values of \(k\) and a subroutine called by the outer loop to
-determine if \(G\) is \colorable{k}.  The outer loop and called subroutine are summarized in the following
+as output, and is composed of an outer loop on values of \(k\) and a recursive subroutine called by the outer loop
+to determine if \(G\) is \colorable{k}.  The outer loop and called subroutine are summarized in the following
 sections.  A complete description of the theorems that support the various steps in algorithm and the application
 of the algorithm to a sample graph then follow.
 
 \subsection{Outer Loop}\label{sec:sub:outer}
 
-The outer loop accepts a graph \(G\) as input and returns \(\X(G)\).  It initially checks for some degenerate cases
-and then loops on increasing values of \(k\).  For each value of \(k\), the called subroutine executes a modified
-Zykov algorithm to determine if \(G\) is \colorable{k}.  The first such successful return identifies \(\X(G)\).
+The outer loop accepts a graph \(G\) as input and returns \(\X(G)\).  It initially computes lower and upper bounds
+for \(k\) using Bron Kerbosch and greedy last-first, respectively.  It then loops on increasing values of \(k\),
+starting with the lower bound and going no further than the upper bound.  For each value of \(k\), the called
+subroutine executes a modified Zykov algorithm to determine if \(G\) is \colorable{k}.  The first such successful
+return identifies \(\X(G)\).
 
 The steps of the outer loop are as follows:
 
 \begin{enumerate}
-\item \label{step:outer:null} If \(n=0\) then return \(0\), thus handling the degenerate case of a null graph.
+\item\label{step:outer:bron} Use the Bron Kerbosch algorithm to compute a \(k_{min}\).
 
-\item \label{step:outer:empty} If \(m=0\) then return \(1\), thus handling the degenerate case of an empty graph.
+\item\label{step:outer:greedy} Use the greedy last-first algorithm to compute a \(k_{max}\).
 
-\item \label{step:outer:initk} Initialize \(k\) to \(2\).
+\item\label{step:outer:initk} Initialize \(k\) to \(k_{min}\).
 
-\item \label{step:outer:call} Call the subroutine to determine if \(G\) is \colorable{k}.  The subroutine returns a
+\item\label{step:outer:match} If \(k=k_{max}\) then go to step~\ref{step:outer:done}.
+
+\item\label{step:outer:call} Call the subroutine to determine if \(G\) is \colorable{k}.  The subroutine returns a
   possibly simplified \(G\) called \(G'\) and a boolean value \(R\) that reports the result of the test.
 
-\item \label{step:outer:result} If \(G\) is \colorable{k} (\(R=\) true) then return \(k\).
+\item\label{step:outer:result} If \(G\) is \colorable{k} (\(R=\) true) then go to step~\ref{step:outer:done}.
 
-\item \label{step:outer:newg} Replace \(G\) with \(G'\).  As will be seen, doing this avoids needless reapplication of
-  certain steps in the called subroutine.
+\item\label{step:outer:newg} Replace \(G\) with \(G'\).  As will be seen, doing this avoids needless reapplication
+  of certain steps in the called subroutine.
 
-\item \label{step:outer:incrk} Increment \(k\).
+\item\label{step:outer:incrk} Increment \(k\) and go to step~\ref{step:outer:match}.
 
-\item \label{step:outer:loop} Go to step~\ref{step:outer:call}.
+\item\label{step:outer:done} Return \(k\).
 \end{enumerate}
 
 A flowchart of these steps is shown in \figurename~\ref{fig:outer}.
@@ -67,24 +71,23 @@ A flowchart of these steps is shown in \figurename~\ref{fig:outer}.
   \scalebox{0.75}{
     \begin{tikzpicture}[>=latex']
       \node (start) [draw,terminal] at (0,0) {START};
-      \node (nullcheck) [draw,decision,below=of start] {\(n=0\)?};
-      \node (nulldone) [draw,terminal,right=of nullcheck] {RETURN \(0\)};
-      \node (emptycheck) [draw,decision,below=of nullcheck] {\(m=0\)?};
-      \node (emptydone) [draw,terminal,right=of emptycheck] {RETURN \(1\)};
-      \node (kinit) [draw,process,below=of emptycheck] {\(k=2\)};
-      \node (kcheck) [draw,predproc,below=of kinit] {CALL \(G,k\)};
+      \node (bron) [draw,predproc,below=of start] {\(\text{Bron}(G)\)};
+      \node (greedy) [draw,predproc,below=of bron] {\(\text{Greedy}(G)\)};
+      \node (kinit) [draw,process,below=of greedy] {\(k=k_{min}\)};
+      \node (kmatch) [draw,decision,below=of kinit] {\(k=k_{max}\)?};
+      \node (kcheck) [draw,predproc,below=of kmatch] {CALL \(G,k\)};
       \node (iskcolor) [draw,decision,below=of kcheck] {\(R=\)TRUE?};
       \node (kdone) [draw,terminal,right=of iskcolor] {RETURN \(k\)};
       \node (newg) [draw,process,below=of iskcolor] {\(G=G'\)};
       \node (kinc) [draw,process,below=of newg] {\(k=k+1\)};
       \node (belowinc) [coordinate,below=0.5cm of kinc] {};
       \node (leftinc) [coordinate,left=3cm of belowinc] {};
-      \draw [->] (start) -- node [auto] {\(G\)} (nullcheck);
-      \draw [->] (nullcheck) -- node [auto] {YES} (nulldone);
-      \draw [->] (nullcheck) -- node [auto] {NO} (emptycheck);
-      \draw [->] (emptycheck) -- node [auto] {YES} (emptydone);
-      \draw [->] (emptycheck) -- node [auto] {NO} (kinit);
-      \draw [->] (kinit) -- (kcheck);
+      \draw [->] (start) -- node [auto] {\(G\)} (bron);
+      \draw [->] (bron) -- node [auto] {\(k_{min}\)} (greedy);
+      \draw [->] (greedy) -- node [auto] {\(k_{max}\)} (kinit);
+      \draw [->] (kinit) -- (kmatch);
+      \draw [->] (kmatch) -| node [auto,pos=0.1] {YES} (kdone);
+      \draw [->] (kmatch) -- node [auto] {NO} (kcheck);
       \draw [->] (kcheck) -- node [auto] {\(G',R\)} (iskcolor);
       \draw [->] (iskcolor) -- node [auto] {YES} (kdone);
       \draw [->] (iskcolor) -- node [auto] {NO} (newg);
@@ -92,67 +95,71 @@ A flowchart of these steps is shown in \figurename~\ref{fig:outer}.
       \draw [->] (kinc) -- (belowinc) -- (leftinc) |- (kcheck);
     \end{tikzpicture}
   }
-  \caption{Proposed algorithm outer loop.}
+  \caption{The proposed algorithm outer loop.}
   \label{fig:outer}
 \end{figure}
 
-The outer loop is guaranteed to terminate because \(k\) will eventually be greater than or equal to \(n\).  Thus,
-by \theoremname~\ref{thm:nlek}, the current state of \(G\) is \colorable{k}, causing the called subroutine to
-return true.
+Note that in the case of the null or an empty graph, the upper and lower bounds for \(k\) will match and the outer
+loop will terminate immediately.  Thus, the subroutine is always called with \(k\ge2\).  Also note that the outer
+loop is guaranteed to terminate because \(k\) will eventually reach \(k_{max}\), or \(k\) will eventually equal or
+exceed \(n\) due to subgraph simplifications applied by the called subroutine.  The latter case causes the called
+subroutine to return true.
 
 \subsection{Called Subroutine}\label{sec:sub:called}
 
 The called subroutine executes a modified version of a Zykov algorithm that determines whether a graph is
 \colorable{k}.  It accepts the current state of \(G\) of order \(n\) and size \(m\) and the current value of
 \(k\ge2\) as inputs.  It returns a possibly simplified version of \(G\) and a boolean value indicating whether or
-not \(G\) is \colorable{k}.  Internally, various tests are applied to trim the corresponding Zykov tree or abandon
+not \(G\) is \colorable{k}.  Internally, various tests are applied to prune the corresponding Zykov tree or abandon
 it all together based on the current value of \(k\).
 
 The steps of the called subroutine and references to their associated theorems are as follows:
 
 \begin{enumerate}
-\item \label{step:sub:check} If \(n\le k\) then return true (\theoremname~\ref{thm:nlek}).
+\item\label{step:sub:check} If \(n\le k\) then return true (\theoremname~\ref{thm:nlek}).
 
-\item \label{step:sub:dencalc} Calculate a maximum edge threshold:
+\item\label{step:sub:dencalc} Calculate a maximum edge threshold:
   \[a=\frac{n^2(k-1)}{2k}\]
 
-\item \label{step:sub:density} If \(m>a\) then return false (Corollary~\ref{cor:density}).
+\item\label{step:sub:density} If \(m>a\) then return false (Corollary~\ref{cor:density}).
 
-\item \label{step:sub:smallcalc} Construct the set \(X\) of all vertices with degree less than \(k\):
+\item\label{step:sub:smallcalc} Construct the set \(X\) of all vertices with degree less than \(k\):
   \[X=\setb{v\in V(G)}{\deg(v)<k}\]
 
-\item \label{step:sub:small} If \(X\ne\emptyset\) then replace \(G\) with \(G-X\) and go to
+\item\label{step:sub:small} If \(X\ne\emptyset\) then replace \(G\) with \(G-X\) and go to
   step~\ref{step:sub:check} (Corollary~\ref{cor:lowdeg}).
 
-\item \label{step:sub:common} Calculate the common number of neighbors between each pair of vertices in \(G\),
+\item\label{step:sub:common} Calculate the common number of neighbors between each pair of vertices in \(G\),
   stopping if one vertex's neighborhood is found to be a subset of another.
 
-\item \label{step:sub:subset} If \(G\) has vertices \(u\) and \(v\) such that \(N(u)\subseteq N(v)\) then replace
+\item\label{step:sub:subset} If \(G\) has vertices \(u\) and \(v\) such that \(N(u)\subseteq N(v)\) then replace
   \(G\) with \(G-u\) and go to step~\ref{step:sub:check} (Theorem~\ref{thm:subset}).
 
-\item \label{step:sub:select} Let \(b\) be the smallest number of common neighbors between any pair of vertices in
+\item\label{step:sub:select} Let \(b\) be the smallest number of common neighbors between any pair of vertices in
   \(G\) as found in step~\ref{step:sub:common}:
   \[b=\min_{u,v\in V(G)}\abs{N(u)\cap N(v)}\]
 
-\item \label{step:sub:ubcalc} Calculate an upper bound for the minimum number of common neighbors between any pair of
-  vertices in \(G\):
+\item\label{step:sub:ubcalc} Calculate an upper bound for the minimum number of common neighbors between any pair
+  of vertices in \(G\):
   \[c=n-2-\frac{n-2}{k-1}\]
 
-\item \label{step:sub:ubcheck} If \(b>c\) then return false (Corollary~\ref{cor:inter}).
+\item\label{step:sub:ubcheck} If \(b>c\) then return false (Corollary~\ref{cor:inter}).
 
-\item \label{step:sub:select2} Select two non-adjacent vertices \(u,v\in V(G)\) with the smallest number of common
+\item\label{step:sub:select2} Select two non-adjacent vertices \(u,v\in V(G)\) with the smallest number of common
   neighbors as found in step~\ref{step:sub:common}.  It will be shown below that such a pair of vertices is
   guaranteed to exist in the current state of \(G\).
 
-\item \label{step:sub:call1} Assume that \(u\) and \(v\) are assigned the same color by letting \(G'=G\cdot uv\).
-  Recursively call this routine to see if \(G'\) is \colorable{k}.  If so, then return true
-  (Theorem~\ref{thm:recurse}).
+\item\label{step:sub:call1} Assume that \(u\) and \(v\) are assigned the same color by letting \(G'=G\cdot uv\) and
+  recursively calling this routine to see if \(G'\) is \colorable{k}.
 
-\item \label{step:sub:call2} Assume that \(u\) and \(v\) are assigned different colors by letting \(G'=G+uv\).
-  Recursively call this subroutine to see if \(G'\) is \colorable{k}.  If so, then return true
-  (Theorem~\ref{thm:recurse}).
+\item\label{step:sub:result1} If \(G\cdot uv\) is \colorable{k} then return true (Theorem~\ref{thm:recurse}).
 
-\item \label{step:sub:fail} Since neither of the assumptions in steps \ref{step:sub:call1} nor \ref{step:sub:call2}
+\item\label{step:sub:call2} Assume that \(u\) and \(v\) are assigned different colors by letting \(G'=G+uv\) and
+  recursively calling this subroutine to see if \(G'\) is \colorable{k}.
+
+\item\label{step:sub:result2} If \(G+uv\) is \colorable{k} then return true (Theorem~\ref{thm:recurse}).
+
+\item\label{step:sub:fail} Since neither of the assumptions in steps \ref{step:sub:call1} nor \ref{step:sub:call2}
   hold, conclude that \(G\) is not \colorable{k} and return false.
 \end{enumerate}
 
@@ -218,18 +225,18 @@ A flowchart of these steps is shown in \figurename~\ref{fig:called}.
       \draw [->] (check2) -- node [auto] {NO} (fail);
     \end{tikzpicture}
   }
-  \caption{Proposed algorithm called subroutine.}
+  \caption{The proposed algorithm called subroutine.}
   \label{fig:called}
 \end{figure}
 
 Step~\ref{step:sub:check} is the success termination condition.  Success occurs when \(G\) is simplified by
-removing sufficent vertices (steps~\ref{step:sub:smallcalc}--\ref{step:sub:subset}) or when the outer loop has
+removing sufficent vertices (steps~\ref{step:sub:smallcalc}--\ref{step:sub:subset}) and the outer loop has
 sufficiently incremented \(k\) (step~\ref{step:outer:incrk}) such that \(n\le k\).
 
 Steps~\ref{step:sub:smallcalc}--\ref{step:sub:subset} attempt to remove vertices to achieve a simpler graph that is
 equivalently \colorable{k}.  Each time a vertex is removed, the Zykov branches associated with that vertex are
-skipped.  Since these same steps would just be repeated for \(k+1\), the subroutine returns the current state of
-the possibly simplified \(G\) to the outer loop as a starting point for the next candidate value of \(k\).
+pruned.  Since these same steps would just be repeated for \(k+1\), the subroutine returns the current state of the
+possibly simplified \(G\) to the outer loop as a starting point for the next candidate value of \(k\).
 
 Steps~\ref{step:sub:dencalc}--\ref{step:sub:density} and \ref{step:sub:select}--\ref{step:sub:ubcheck} apply tests
 that attempt to disprove that the current state of \(G\) is \colorable{k} for the current value of \(k\).  If so,
@@ -1026,122 +1033,27 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
 ``I\#.''.  Recursive subroutine calls add a call level: ``I\#--\#.''
 
 \begin{enumerate}
-\item (O\ref{step:outer:null}) Since \(n=8>0\), \(G\) is not the null graph, so continue.
+\item (O\ref{step:outer:bron}) Use the Bron Kerbosch algorithm to calculate \(k_{min}=3\).
 
-\item (O\ref{step:outer:empty}) Since \(n=8>1\), \(G\) is not an empty graph, so continue.
+\item (O\ref{step:outer:greedy}) Use the greedy last-first algorithm to calculate \(k_{max}=4\).
 
-\item (O\ref{step:outer:initk}) Initialize \(k\) to 2.
+\item (O\ref{step:outer:initk}) Initialize \(k=k_{min}=3\).
 
-\item (O\ref{step:outer:call}) Call the subroutine with \(G\) and \(k=2\).
+\item (O\ref{step:outer:match}) \(k=3\ne4=k_{max}\), so continue.
 
-\item (I\ref{step:sub:check}) \(n=8\nleq k=2\), so continue.
+\item (O\ref{step:outer:call}) Call the subroutine with \(G\) and \(k=3\).
 
-\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=8\) and \(k=2\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{8^2(2-1)}{2\cdot2}=\frac{64}{4}=16\]
+\item (I\ref{step:sub:check}) \(n=8\nleq3=k\), so continue.
 
-\item (I\ref{step:sub:density}) Since \(m=12\ngtr16=a\), continue.
+\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=8\) and \(k=3\):
+  \[a=\frac{n^2(k-1)}{2k}=\frac{8^2(3-1)}{2\cdot3}\approx21.3\]
 
-\item (I\ref{step:sub:smallcalc}) Since \(\deg(h)=1<2\), set \(X=\set{h}\).
+\item (I\ref{step:sub:density}) \(m=12\ngtr21.3=a\), so continue.
 
-\item (I\ref{step:sub:small}) Since \(X\ne\emptyset\), replace \(G\) with \(G-X\).  The result is shown in
-  \figurename~\ref{fig:removeh}.  Now \(n=7\) and \(m=11\).
+\item (I\ref{step:sub:smallcalc}) \(\deg(g)=2<3\) and \(\deg(h)=1<3\), so set \(X=\set{g,h}\).
 
-  \begin{figure}[H]
-    \centering
-    \begin{tikzpicture}
-      \node (a) [draw,circle] at (2,6) {\(a\)};
-      \node (b) [draw,circle] at (0,4) {\(b\)};
-      \node (c) [draw,circle] at (4,4) {\(c\)};
-      \node (d) [draw,circle] at (0,2) {\(d\)};
-      \node (e) [draw,circle] at (4,2) {\(e\)};
-      \node (f) [draw,circle] at (2,0) {\(f\)};
-      \node (g) [draw,circle] at (0,0) {\(g\)};
-      \draw (a) to (b);
-      \draw (a) to (c);
-      \draw (a) to (f);
-      \draw (b) to (c);
-      \draw (b) to (d);
-      \draw (c) to (e);
-      \draw (d) to (e);
-      \draw (d) to (f);
-      \draw (d) to (g);
-      \draw (e) to (f);
-      \draw (f) to (g);
-    \end{tikzpicture}
-    \caption{Step: \(G-\set{h}\).}
-    \label{fig:removeh}
-  \end{figure}
-
-\item (I\ref{step:sub:check}) \(n=7\nleq k=2\), so continue.
-
-\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=7\) and \(k=2\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{7^2(2-1)}{2\cdot2}=\frac{49}{4}\approx12.3\]
-
-\item (I\ref{step:sub:density}) Since \(m=12\ngtr12.3=a\), continue.
-
-\item (I\ref{step:sub:smallcalc}) Since \(\d(G)=2\ge2=k\), set \(X=\emptyset\).
-
-\item (I\ref{step:sub:small}) Since \(X=\emptyset\), continue.
-
-\item (I\ref{step:sub:common}) Calculate the number of common neighbors, looking for any subsets.  The results are
-  shown in \tablename~\ref{tab:common1}.
-
-  \begin{table}[H]
-    \centering
-    \caption{Calculating Common Neighbors 1}
-    \label{tab:common1}
-    \begin{tabular}{|c|c|c|c|c|}
-      \hline
-      \(u\) & \(v\) & \(\abs{N(u)\cap N(v)}\) & subset? & adjacent? \\
-      \hline
-      \(a\) & \(b\) & 1 & N & Y \\
-      \hline
-      \(a\) & \(c\) & 1 & N & Y \\
-      \hline
-      \(a\) & \(d\) & 2 & N & N \\
-      \hline
-      \(a\) & \(e\) & 2 & N & N \\
-      \hline
-      \(a\) & \(f\) & 0 & N & Y \\
-      \hline
-      \(a\) & \(g\) & 1 & N & N \\
-      \hline
-      \(b\) & \(c\) & 1 & N & Y \\
-      \hline
-      \(b\) & \(d\) & 0 & N & Y \\
-      \hline
-      \(b\) & \(e\) & 2 & N & N \\
-      \hline
-      \(b\) & \(f\) & 2 & N & N \\
-      \hline
-      \(b\) & \(g\) & 1 & N & N \\
-      \hline
-      \(c\) & \(d\) & 2 & N & N \\
-      \hline
-      \(c\) & \(e\) & 0 & N & Y \\
-      \hline
-      \(c\) & \(f\) & 2 & N & N \\
-      \hline
-      \(c\) & \(g\) & 0 & N & N \\
-      \hline
-      \(d\) & \(e\) & 1 & N & Y \\
-      \hline
-      \(d\) & \(f\) & 2 & N & Y \\
-      \hline
-      \(d\) & \(g\) & 1 & N & Y \\
-      \hline
-      \(e\) & \(f\) & 1 & N & Y \\
-      \hline
-      \(e\) & \(g\) & 2 & Y & N \\
-      \hline
-      \(f\) & \(g\) & 1 & N & Y \\
-      \hline
-    \end{tabular}
-  \end{table}
-
-\item (I\ref{step:sub:subset}) Note that \(N(g)=\set{d,f}\) and \(N(e)=\set{c,d,f}\).  Since \(N(g)\subseteq
-  N(e)\), replace \(G\) with \(G-g\).  The result is shown in \figurename~\ref{fig:removeg}.  Now \(n=6\) and
-  \(m=9\).
+\item (I\ref{step:sub:small}) \(X\ne\emptyset\), so replace \(G\) with \(G-X\).  The result is shown in
+  \figurename~\ref{fig:removegh}.  Now \(n=6\) and \(m=9\).
 
   \begin{figure}[H]
     \centering
@@ -1162,28 +1074,28 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
       \draw (d) to (f);
       \draw (e) to (f);
     \end{tikzpicture}
-    \caption{Step: \(G-g\).}
-    \label{fig:removeg}
+    \caption{Step: \(G-\set{g,h}\).}
+    \label{fig:removegh}
   \end{figure}
 
-\item (I\ref{step:sub:check}) \(n=6\nleq k=2\), so continue.
+\item (I\ref{step:sub:check}) \(n=6\nleq3=k\), so continue.
 
-\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=6\) and \(k=2\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{6^2(2-1)}{2\cdot2}=\frac{36}{4}=9\]
+\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=6\) and \(k=3\):
+  \[a=\frac{n^2(k-1)}{2k}=\frac{6^2(3-1)}{2\cdot3}=12\]
 
-\item (I\ref{step:sub:density}) Since \(m=9\ngtr9=a\), continue.
+\item (I\ref{step:sub:density}) \(m=12\ngtr12=a\), so continue.
 
-\item (I\ref{step:sub:smallcalc}) Since \(\d(G)=2\ge2=k\), set \(X=\emptyset\).
+\item (I\ref{step:sub:smallcalc}) \(\dmin(G)=3\ge3=k\), so set \(X=\emptyset\).
 
-\item (I\ref{step:sub:small}) Since \(X=\emptyset\), continue.
+\item (I\ref{step:sub:small}) \(X=\emptyset\), so continue.
 
 \item (I\ref{step:sub:common}) Calculate the number of common neighbors, looking for any subsets.  The results are
-  shown in \tablename~\ref{tab:common2}.
+  shown in \tablename~\ref{tab:common}.
 
   \begin{table}[H]
     \centering
-    \caption{Calculating Common Neighbors 2}
-    \label{tab:common2}
+    \caption{Calculating Common Neighbors}
+    \label{tab:common}
     \begin{tabular}{|c|c|c|c|c|}
       \hline
       \(u\) & \(v\) & \(\abs{N(u)\cap N(v)}\) & subset? & adjacent? \\
@@ -1221,22 +1133,22 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
     \end{tabular}
   \end{table}
 
-\item (I\ref{step:sub:subset}) Since there are no \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\), continue.
+\item (I\ref{step:sub:subset}) There are no \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\), so continue.
 
-\item (I\ref{step:sub:select}) From \tablename~\ref{tab:common2}, the minimum number of common neighbors is 0
-  (e.g., \(a\) and \(f\)).  So set \(b=0\).
+\item (I\ref{step:sub:select}) From \tablename~\ref{tab:common}, the minimum number of common neighbors is 0
+  (e.g., \(a\) and \(f\)), so set \(b=0\).
 
 \item (I\ref{step:sub:ubcalc}) Calculate the upper bound for minimum number of common neighbors for \(n=6\) and
-  \(k=2\):
-  \[c=n-2-\frac{n-2}{k-1}=6-2-\frac{6-2}{2-1}=4-4=0\]
+  \(k=3\):
+  \[c=n-2-\frac{n-2}{k-1}=6-2-\frac{6-2}{3-1}=2\]
 
-\item (I\ref{step:sub:ubcheck}) Since \(b=0\ngtr0=c\), conclude that \(G\) may be \colorable{2} and continue.
+\item (I\ref{step:sub:ubcheck}) \(b=0\ngtr2=c\), so conclude that \(G\) may be \colorable{3} and continue.
 
-\item (I\ref{step:sub:select2}) Based on the results in \tablename~\ref{tab:common2}, all of the nonadjacent
+\item (I\ref{step:sub:select2}) Based on the results in \tablename~\ref{tab:common}, all of the nonadjacent
   vertices share two common neighbors, so select \(a\) and \(d\).
 
 \item (I\ref{step:sub:call1}) Recursively call the subroutine with \(G\cdot ad\), as shown in
-  \figurename~\ref{fig:contract1}.  Now, \(n=5\) and \(m=7\).
+  \figurename~\ref{fig:contract}.  Now, \(n=5\) and \(m=7\).
 
   \begin{figure}[H]
     \centering
@@ -1255,105 +1167,19 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
       \draw (e) to (f);
     \end{tikzpicture}
     \caption{Step: \(G\cdot ad\).}
-    \label{fig:contract1}
+    \label{fig:contract}
   \end{figure}
 
-\item (I\ref{step:sub:check}-1) \(n=5\nleq k=2\), so continue.
-
-\item (I\ref{step:sub:dencalc}-1) Calculate the maximum edge threshold for \(n=5\) and \(k=2\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{5^2(2-1)}{2\cdot2}=\frac{25}{4}=6.25\]
-
-\item (I\ref{step:sub:density}-1) Since \(m=7>6.25=a\), conclude that \(G\) is not \colorable{2} and return false.
-
-\item (I\ref{step:sub:call2}) Returning to the \(G\) of \figurename~\ref{fig:removeg}, recursively call the
-  subroutine with \(G+ad\), as shown in \figurename~\ref{fig:edge1}.  Now, \(n=6\) and \(m=10\).
-
-  \begin{figure}[H]
-    \centering
-    \begin{tikzpicture}
-      \node (a) [draw,circle] at (2,6) {\(a\)};
-      \node (b) [draw,circle] at (0,4) {\(b\)};
-      \node (c) [draw,circle] at (4,4) {\(c\)};
-      \node (d) [draw,circle] at (0,2) {\(d\)};
-      \node (e) [draw,circle] at (4,2) {\(e\)};
-      \node (f) [draw,circle] at (2,0) {\(f\)};
-      \draw (a) to (b);
-      \draw (a) to (c);
-      \draw (a) to (f);
-      \draw (b) to (c);
-      \draw (b) to (d);
-      \draw (c) to (e);
-      \draw (d) to (e);
-      \draw (d) to (f);
-      \draw (e) to (f);
-      \draw (a) to (d);
-    \end{tikzpicture}
-    \caption{Step: \(G+ad\).}
-    \label{fig:edge1}
-  \end{figure}
-
-\item (I\ref{step:sub:check}-1) \(n=6\nleq k=2\), so continue.
-
-\item (I\ref{step:sub:dencalc}-1) Calculate the maximum edge threshold for \(n=6\) and \(k=2\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{6^2(2-1)}{2\cdot2}=\frac{36}{4}=9\]
-
-\item (I\ref{step:sub:density}-1) Since \(m=10>9=a\), conclude that \(G\) is not \colorable{2} and return false.
-
-\item (I\ref{step:sub:fail}) Conclude that the \(G\) of \figurename~\ref{fig:removeg} is not \colorable{2} and
-  return false with this \(G\).
-
-\item (O\ref{step:outer:result}) Since the called subroutine returned false, \(G\) is not \colorable{2}, so
-  continue.
-
-\item (O\ref{step:outer:newg}) Replace \(G\) with the graph returned by the previous call
-  (\figurename~\ref{fig:removeg}).
-
-\item (O\ref{step:outer:incrk}) Increment \(k\) to 3.
-
-\item (O\ref{step:outer:call}) Call the subroutine with the new \(G\) and \(k=3\).
-  
-\item (I\ref{step:sub:check}) \(n=6\nleq k=3\), so continue.
-
-\item (I\ref{step:sub:dencalc}) Calculate the maximum edge threshold for \(n=6\) and \(k=3\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{6^2(3-1)}{2\cdot3}=\frac{72}{6}=12\]
-
-\item (I\ref{step:sub:density}) Since \(m=9\ngtr11=a\), continue.
-
-\item (I\ref{step:sub:smallcalc}) Since \(\dmin(G)=3\ge3=k\), set \(X=\emptyset\).
-
-\item (I\ref{step:sub:small}) Since \(X=\emptyset\), continue.
-
-\item (I\ref{step:sub:common}) Calculate the number of common neighbors, looking for any subsets.  Note that the
-  results are the same as those shown in \tablename~\ref{tab:common2}.
-
-\item (I\ref{step:sub:subset}) Since there are no \(u,v\in V(G)\) such that \(N(u)\subseteq N(v)\), continue.
-
-\item (I\ref{step:sub:select}) From \tablename~\ref{tab:common2}, the minimum number of common neighbors is 0
-  (e.g., \(a\) and \(f\)).  So set \(b=0\).
-
-\item (I\ref{step:sub:ubcalc}) Calculate the upper bound for minimum number of common neighbors for \(n=6\) and
-  \(k=3\):
-  \[c=n-2-\frac{n-2}{k-1}=6-3-\frac{6-2}{3-1}=3-2=1\]
-
-\item (I\ref{step:sub:ubcheck}) Since \(b=0\ngtr1=c\), conclude that \(G\) may be \colorable{3} and continue.
-
-\item (I\ref{step:sub:select2}) Based on the results in \tablename~\ref{tab:common2}, all of the nonadjacent
-  vertices share two common neighbors, so select \(a\) and \(d\).
-
-\item (I\ref{step:sub:call1}) Recursively call the subroutine with \(G\cdot ad\), as shown in
-  \figurename~\ref{fig:contract1}.  Now, \(n=5\) and \(m=7\).
-
-\item (I\ref{step:sub:check}-1) \(n=5\nleq k=2\), so continue.
+\item (I\ref{step:sub:check}-1) \(n=5\nleq3=k\), so continue.
 
 \item (I\ref{step:sub:dencalc}-1) Calculate the maximum edge threshold for \(n=5\) and \(k=3\):
-  \[a=\frac{n^2(k-1)}{2k}=\frac{5^2(3-1)}{2\cdot3}=\frac{25}{3}=8.3\]
+  \[a=\frac{n^2(k-1)}{2k}=\frac{5^2(3-1)}{2\cdot3}\approx8.3\]
 
-\item (I\ref{step:sub:density}-1) Since \(m=7\ngtr8.3=a\), conclude that \(G\) may be \colorable{3} and continue.
-
+\item (I\ref{step:sub:density}-1) \(m=7\ngtr8.3=a\), so conclude that \(G\) may be \colorable{3} and continue.
   
-\item (I\ref{step:sub:smallcalc}-1) Since \(\deg(b)=\deg(f)=2<3=k\), set \(X=\set{b,f}\).
+\item (I\ref{step:sub:smallcalc}-1) \(\deg(b)=\deg(f)=2<3=k\), so set \(X=\set{b,f}\).
 
-\item (I1-\ref{step:sub:small}-1) Since \(X\ne\emptyset\), replace \(G\) with \(G-X\).  The result is shown in Figure
+\item (I1-\ref{step:sub:small}-1) \(X\ne\emptyset\), so replace \(G\) with \(G-X\).  The result is shown in Figure
   \ref{fig:removecf}.  Now \(n=3\) and \(m=3\).
 
   \begin{figure}[H]
@@ -1370,19 +1196,19 @@ The algorithm steps are as follows.  Outer loop steps are marked by ``O\#'' and 
     \label{fig:removecf}
   \end{figure}
 
-\item (I\ref{step:sub:check}-1) \(n=3\le k=3\), so conclude that the \(G\) of \figurename~\ref{fig:removecf} is
-  \colorable{3} and return true and this \(G\).
+\item (I\ref{step:sub:check}-1) \(n=3\le3=k\), so conclude that the \(G\) of \figurename~\ref{fig:removecf} is
+  \colorable{3} and return true.
 
-\item (I\ref{step:sub:call1}) The recursive call returned true, so conclude that the returned \(G\) of
-  \figurename~\ref{fig:removecf} is \colorable{3} and return true with this \(G\).
+\item (I\ref{step:sub:result1}) The recursive call returned true, so conclude that the \(G\) of
+  \figurename~\ref{fig:removecf} is \colorable{3} and return true.
 
-\item (O\ref{step:outer:call}) The called subroutine returned true, so conclude that the returned \(G\) of
-  \figurename~\ref{removecf} is \chromatic{3} and return \(\X(G)=3\).
-
+\item (O\ref{step:outer:result})\label{step:last} The called subroutine returned true, so conclude that the \(G\)
+  is \chromatic{3} and return \(\X(G)=3\).
 \end{enumerate}
 
-Thus, the algorithm determines that the example \(G\) of Figure \ref{fig:example} is \chromatic{3}.  In order to
-determine a \chromatic{3} coloring for \(G\), first construct a set \(C\) of three colors:
+Thus, the algorithm determines that the example \(G\) of Figure \ref{fig:example} is \chromatic{3} in
+\ref{step:last} steps.  In order to determine a \chromatic{3} coloring for \(G\), first construct a set \(C\) of
+three colors:
 \[C=\set{\text{\textcolor{green}{green}},\text{\textcolor{blue}{blue}},\text{\textcolor{red}{red}}}\]
 Next, follow the algorithm's modification steps in reverse order and color the corresponding vertices accordingly.
 The steps are as follows:
@@ -1456,44 +1282,8 @@ The steps are as follows:
     \label{fig:colorbf}
   \end{figure}
 
-\item The contracted vertices have already been colored, so the next simplification to address is the removal of
-  \(g\) due to the neighborhood subset test.  Since \(N(g)\subseteq N(e)\), color \(g\) and \(e\) the same color.
-  Since \(e\) has already been assign a color, use it for \(g\).  The result is shown in
-  \figurename~\ref{fig:colorg}.
-
-  \begin{figure}[H]
-    \centering
-    \begin{tikzpicture}
-      \colorlet{c1}{green!25!white}
-      \colorlet{c2}{blue!25!white}
-      \colorlet{c3}{red!25!white}
-      \node [fill=c1] (a) [draw,circle] at (2,6) {\(a\)};
-      \node [fill=c3] (b) [draw,circle] at (0,4) {\(b\)};
-      \node [fill=c2] (c) [draw,circle] at (4,4) {\(c\)};
-      \node [fill=c1] (d) [draw,circle] at (0,2) {\(d\)};
-      \node [fill=c3] (e) [draw,circle] at (4,2) {\(e\)};
-      \node [fill=c2] (f) [draw,circle] at (2,0) {\(f\)};
-      \node [fill=c3] (g) [draw,circle] at (0,0) {\(g\)};
-      \node (h) [draw,circle] at (4,0) {\(h\)};
-      \draw (a) to (b);
-      \draw (a) to (c);
-      \draw (a) to (f);
-      \draw (b) to (c);
-      \draw (b) to (d);
-      \draw (c) to (e);
-      \draw (d) to (e);
-      \draw (d) to (f);
-      \draw (d) to (g);
-      \draw (e) to (f);
-      \draw (f) to (g);
-      \draw (f) to (h);
-    \end{tikzpicture}
-    \caption{Coloring \(g\).}
-    \label{fig:colorg}
-  \end{figure}
-
-\item Finally, color the first removed vertex \(h\) with any appropriate color.  The final result is shown in
-  \figurename~\ref{fig:cfinal}.
+\item Finally, color the first removed vertices \(g\) and \(h\) with any appropriate color.  The final result is
+  shown in \figurename~\ref{fig:cfinal}.
 
   \begin{figure}[H]
     \centering
